# shabalaga

./: .gitignore  CMakeLists.txt  README.md
assets/effects/: bomber_explosion.aseprite  bsg_explosion.aseprite  fighter_explosion.aseprite  player_explosion.aseprite  scout_explosion.aseprite
assets/objects/enemies/: bomber.aseprite  fighter.aseprite  scout.aseprite
assets/objects/engines/: base_engine.aseprite  big_pulse_engine.aseprite  bomber_engine.aseprite  burst_engine.aseprite  scout_engine.aseprite  supercharged_engine.aseprite
assets/objects/projectiles/: auto_cannon_projectile.aseprite  big_space_gun_projectile.aseprite  zapper_projectile.aseprite  zapper_projectilet.aseprite
assets/pickups/: fuel.aseprite
assets/ui/: fuel_bar.aseprite
include/: style_cyber.h  style_lavanda.h
src/: animation_component.hpp  aseprite.cpp  aseprite.hpp  aseprite_wrapper.cpp  aseprite_wrapper.hpp  auto_cannon_entity.cpp  auto_cannon_entity.hpp  auto_cannon_projectile_entity.cpp  auto_cannon_projectile_entity.hpp  auto_cannon_system.hpp  background_component.cpp  background_component.hpp  background_system.cpp  background_system.hpp  behavior_component.hpp  behavior_system.cpp  behavior_system.hpp  bomber_entity.cpp  bomber_entity.hpp  bomber_explosion_entity.cpp  bomber_explosion_entity.hpp  bullet_entity.cpp  bullet_entity.hpp  button_system.cpp  button_system.hpp  checkbox_system.cpp  checkbox_system.hpp  clean_up_component.hpp  clean_up_system.cpp  clean_up_system.hpp  collision_component.cpp  collision_component.hpp  collision_system.cpp  collision_system.hpp  collison_component.hpp  compile_commands.json  cute_aseprite_impl.c  dropdown_box_system.cpp  dropdown_box_system.hpp  engine_entity.cpp  (+124 more)
(+6 files in other folders)
